# IWBTOR_SFML

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  Game.cpp  Game.hpp  IState.hpp  MenuState.cpp  MenuState.hpp  README  Settings.cpp  Settings.hpp  config.h.in
cmake_modules/: AddTargetProperty.cmake  CopyDll.cmake
res/sprites/iwbtg/: titlePlatforms.json
src/: Game.cpp  Game.hpp  IState.hpp  MenuState.cpp  MenuState.hpp  ResMan.cpp  ResMan.hpp  ScrollingStoryState.cpp  ScrollingStoryState.hpp  Settings.cpp  Settings.hpp  Utils.cpp  Utils.hpp  main.cpp
